--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Super Smash Bros UI",
   "main": "index.js",
   "scripts": {
-    "build": "npm run clean && webpack --config webpack/production.config.js",
-    "clean": "rm -rf dist",
+    "build": "webpack --config webpack/production.config.js",
     "deploy": "node scripts/deploy-gh-pages.js",
     "lint": "eslint src/**/*.{ts,tsx}",
     "lint:fix": "npm run lint -- --fix",
@@ -36,6 +35,7 @@
     "@types/webfontloader": "^1.6.29",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.13.0",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.0",
     "eslint": "^6.8.0",
@@ -45,8 +45,11 @@
     "express": "^4.17.1",
     "fibers": "^4.0.2",
     "gh-pages": "^2.1.1",
+    "html-inline-css-webpack-plugin": "^1.8.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pre-commit": "^1.2.2",
     "prettier": "^1.19.1",
     "react-inlinesvg": "^1.2.0",
